# feature-architecture-test

./: .gitignore  Bar.cpp  CMakeLists.txt  DebugLogger.cpp  DebugLogger.h  Modularity.h  bar.cpp  bar.h  foo.cpp  foo.h  logger.cpp  logger.h  main.cpp  modularity.cpp  modularity.h
Example/: CMakeLists.txt  Logger.cpp  Logger.h  PluginManager.cpp  PluginManager.h  config.h  main.cpp
Example/core/: Display.cpp  Display.h  Encryption.cpp  Encryption.h  Fs.cpp  Fs.h  Time.cpp  Time.h  TimeFormater.cpp
Example/plugin/: Encryption.cpp  ShowFile.cpp  ShowFile.h  TimeLogger.cpp  TimeLogger.h  plugin.h
LoogerUnhealthyInheritance/: Bar.h  CMakeLists.txt  Foo.cpp  Foo.h  Logger.cpp  Logger.h  Modularity.cpp  Modularity.h  main.cpp
ModularityViolation/: CMakeLists.txt  Color.cpp  Color.h  Config.h  Graph.cpp  Graph.h  Node.cpp  Node.h  main.cpp
invokeContBug/: CMakeLists.txt  main.cpp
